package SimUDuck.Behaviours;

public interface FlyBehaviour {
    public void fly();
}
