package SimUDuck.Behaviours;

public interface QuackBehaviour {
    public void quack();
}
