package SimUDuck.Behaviours;

public class FlyRocketPowered implements FlyBehaviour {
    public void fly() {
        System.out.println("I'm flying with a rocket!");
    }
}
