package SimUDuck.Behaviours;

public class FlyWithWings implements FlyBehaviour {
    public void fly() {
        System.out.println("I'm flying!!");
    }
}
