package SimUDuck.Ducks;

import SimUDuck.Behaviours.FlyNoWay;
import SimUDuck.Behaviours.Quack;

public class ModelDuck extends Duck {

    public ModelDuck() {
        flyBehaviour = new FlyNoWay();
        quackBehaviour = new Quack();
    }

    public void display() {
        System.out.println("I'm a model duck");
    }
}
