' Generated by UML Generator
' Encoded: VLInReCm4Dtv2ez45LNd355QLPKwf6hBaA7gS1WdEM7iO9j4QP9-UmsaO8V0UE_UlNiy3kRQW39bpWETeTY2WfnG3be_6gCmAGrxfLB4-CF8Gx31b16AYd8M13MBB81pKEbpIJDo30YvSu1mKW4fwYs7GpYPaft4D3Ytep9bt1dyBmV78D560JMDGTAE_gxuuObjO8UoL5FoubHLjoY1Pax_mwij8uggXSEhBRHbQYLLRgLleBMWY-izvbxDZ6igN2M-Iv_g-mkBvDgo4maAOpq0PPvU4-YAtmYzLchwXMVR4_Ft3T0RmRWe6MIZ56ljJIxXC69hOGzjp5ehj4IpMQ9Own4nI_kKD6FcNUwPOkdONXHOlVWOyvA3aPTdFTglmY0zannGXA3MUafY-ps8zTUte-4UVnITPlL91jrTTzYbdFd7sQ9N9zaaSNz_wdKkQTzgjIdNJMzFb-x0O9TgVxYNPfyoPoArlv0_
' URL: http://www.plantuml.com/plantuml/uml/VLInReCm4Dtv2ez45LNd355QLPKwf6hBaA7gS1WdEM7iO9j4QP9-UmsaO8V0UE_UlNiy3kRQW39bpWETeTY2WfnG3be_6gCmAGrxfLB4-CF8Gx31b16AYd8M13MBB81pKEbpIJDo30YvSu1mKW4fwYs7GpYPaft4D3Ytep9bt1dyBmV78D560JMDGTAE_gxuuObjO8UoL5FoubHLjoY1Pax_mwij8uggXSEhBRHbQYLLRgLleBMWY-izvbxDZ6igN2M-Iv_g-mkBvDgo4maAOpq0PPvU4-YAtmYzLchwXMVR4_Ft3T0RmRWe6MIZ56ljJIxXC69hOGzjp5ehj4IpMQ9Own4nI_kKD6FcNUwPOkdONXHOlVWOyvA3aPTdFTglmY0zannGXA3MUafY-ps8zTUte-4UVnITPlL91jrTTzYbdFd7sQ9N9zaaSNz_wdKkQTzgjIdNJMzFb-x0O9TgVxYNPfyoPoArlv0_
' Generated on: 2025-12-07T20:08:09.514784

@startuml
skinparam classAttributeIconSize 0
hide circle

class MallardDuck {
  +MallardDuck()
  +display(): void
}

class ModelDuck {
  +ModelDuck()
  +display(): void
}

abstract class Duck {
  ~flyBehaviour: FlyBehaviour
  ~quackBehaviour: QuackBehaviour
  --
  +Duck()
  +display(): void
  +performFly(): void
  +performQuack(): void
  +swim(): void
  +setFlyBehaviour(fb: FlyBehaviour): void
  +setQuackBehaviour(qb: QuackBehaviour): void
}

interface FlyBehaviour {
  +fly(): void
}

class Quack {
  +quack(): void
}

interface QuackBehaviour {
  +quack(): void
}

class Squeak {
  +quack(): void
}

class FlyNoWay {
  +fly(): void
}

class MuteQuack {
  +quack(): void
}

class FlyWithWings {
  +fly(): void
}

class FlyRocketPowered {
  +fly(): void
}

class MiniDuckSimulator {
  +{static} main(args: String[]): void
}

MallardDuck --|> Duck
ModelDuck --|> Duck
Duck --> FlyBehaviour
Duck --> QuackBehaviour
Quack ..|> QuackBehaviour
Squeak ..|> QuackBehaviour
FlyNoWay ..|> FlyBehaviour
MuteQuack ..|> QuackBehaviour
FlyWithWings ..|> FlyBehaviour
FlyRocketPowered ..|> FlyBehaviour
@enduml